Actually fixed misaligned logo

--- a/app/assets/stylesheets/viewports/_medium.scss
+++ b/app/assets/stylesheets/viewports/_medium.scss
@@ -88,26 +88,17 @@
 		}
 
 		.logo {
-			width: 48px;
-			height: 48px;
-			background-size: contain;
-			margin-top: 2px;
-			background-position: left top;
-			position: absolute;
-		}
-
-		.inner-bar {
-			margin-top: 0;
-		}
-
-		body.home & .logo {
 			position: static;
 			background-position: center;
 			width: 48px;
 			height: 48px;
-			margin-top: -2px;
+			margin-top: -3px;
 			background-size: contain;
 			margin: .3em auto 0;
+		}
+
+		.inner-bar {
+			margin-top: 0;
 		}
 	}
 
